@@ -22,23 +22,33 @@ from bzrlib import (
 class TestPatchHeader(tests.TestCase):
 
     def test_format_patch_date(self):
+        # epoch is always in utc
         self.assertEqual('1970-01-01 00:00:00 +0000',
             timestamp.format_patch_date(0))
-        self.assertEqual('1970-01-01 05:00:00 +0500',
+        self.assertEqual('1970-01-01 00:00:00 +0000',
             timestamp.format_patch_date(0, 5 * 3600))
-        self.assertEqual('1969-12-31 19:00:00 -0500',
+        self.assertEqual('1970-01-01 00:00:00 +0000',
             timestamp.format_patch_date(0, -5 * 3600))
-        self.assertEqual('1969-12-31 19:00:00 -0500',
-            timestamp.format_patch_date(0, -5 * 3600))
+        # regular timestamp with typical timezone
         self.assertEqual('2007-03-06 10:04:19 -0500',
             timestamp.format_patch_date(1173193459, -5 * 3600))
+        # the timezone part is HHMM
+        self.assertEqual('2007-03-06 09:34:19 -0530',
+            timestamp.format_patch_date(1173193459, -5.5 * 3600))
+        # timezones can be offset by single minutes (but no less)
+        self.assertEqual('2007-03-06 15:05:19 +0001',
+            timestamp.format_patch_date(1173193459, +1 * 60))
 
     def test_parse_patch_date(self):
         self.assertEqual((0, 0),
             timestamp.parse_patch_date('1970-01-01 00:00:00 +0000'))
+        # even though we don't emit pre-epoch dates, we can parse them
         self.assertEqual((0, -5 * 3600),
             timestamp.parse_patch_date('1969-12-31 19:00:00 -0500'))
         self.assertEqual((0, +5 * 3600),
             timestamp.parse_patch_date('1970-01-01 05:00:00 +0500'))
         self.assertEqual((1173193459, -5 * 3600),
             timestamp.parse_patch_date('2007-03-06 10:04:19 -0500'))
+        # offset of three minutes
+        self.assertEqual((1173193459, +3 * 60),
+            timestamp.parse_patch_date('2007-03-06 15:07:19 +0003'))
